--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@ $ git checkout gh-pages
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/wjmelements" class="avatar"><img src="https://secure.gravatar.com/avatar/17aa780bc83d4450d5ef23a887086a09?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/wjmelements">William Morriss</a> did backend</p>
+      <p><a href="https://github.com/wjmelements" class="avatar"><img src="https://secure.gravatar.com/avatar/17aa780bc83d4450d5ef23a887086a09?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/wjmelements">William Morriss</a>: backend</p>
+      </div>
+      <div class="owner">
+      <p><a href="https://github.com/mongoose700" class="avatar"><img src="https://secure.gravatar.com/avatar/55ea433e0e2cd7050e389fc8aad8d463?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/mongoose700">Michael Peirce</a>: backend</p>
+      </div>
+      <div class="owner">
+      <p><a href="https://github.com/derektom14" class="avatar"><img src="https://secure.gravatar.com/avatar/cb9f7061389f921a56ca9236b0c5cfd2?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/derektom14">Derek Peirce</a>: frontend</p>
       </div>
       <div class="creds">
         <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
