Changing picture size

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
         <p>
 			This is a build order calculator. If you download it, you can construct and save build orders.
-			<img src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
+			Currently, it is in beta.
+			<img class="main_image" src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
 		</p>
       </div>
     </div>
