--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 			This is a build order calculator. If you download it, you can construct and save build orders.
 			Currently, it is in beta.
 			<img class="main_image" src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
+			You can view various graphs about your build order.
+			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/supply_example.png">
+			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/resource_rate_example.png">
+			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/army_example.png">
+			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/resource_held_example.png">
 		</p>
       </div>
     </div>
