--- a/index.html
+++ b/index.html
@@ -28,22 +28,31 @@
       <p class="tagline">A build order calculator for Starcraft II: Heart of the Swarm</p>
       <div id="main" role="main">
         <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/wjmelements/buildcraft/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/wjmelements/buildcraft/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/wjmelements/buildcraft" class="code">View Buildcraft on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
+			<div class="inner">
+			  <a href="https://github.com/wjmelements/buildcraft/tarball/master" class="download-button tar"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft/zipball/master" class="download-button zip"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft" class="code">View Buildcraft on GitHub</a>
+			</div>
+			<div class="inner">
+			  <a href="https://github.com/wjmelements/buildcraft/tarball/linux" class="download-button tar"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft/zipball/linux" class="download-button zip"><span>Download</span></a>
+			  <p class="download-description">Download for Linux</p>
+			</div>
+			<div class="inner">
+			  <a href="https://github.com/wjmelements/buildcraft/tarball/windows" class="download-button tar"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft/zipball/windows" class="download-button zip"><span>Download</span></a>
+			  <p class="download-description">Download for Windows</p>
+			</div>
         </div>
         <p>
 			This is a build order calculator. If you download it, you can construct and save build orders.
 			Currently, it is in beta.
-			<img class="main_image" src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
+			<img class="main-image" src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
 			You can view various graphs about your build order.
-			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/supply_example.png">
-			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/resource_rate_example.png">
-			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/army_example.png">
-			<img class="graph_image" src="http://wjmelements.github.com/buildcraft/images/resource_held_example.png">
+			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/supply_example.png">
+			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/resource_rate_example.png">
+			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/army_example.png">
+			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/resource_held_example.png">
 		</p>
       </div>
     </div>
