--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <p>
 			This is a build order calculator. If you download it, you can construct and save build orders.
 			Currently, it is in beta.
-			<img class="main-image" src="http://wjmelements.github.com/buildcraft/images/buildcraft_example.png">
+			<img class="main-image" src="images/buildcraft_example.png">
 			You can view various graphs about your build order.
-			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/supply_example.png">
-			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/resource_rate_example.png">
-			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/army_example.png">
-			<img class="graph-image" src="http://wjmelements.github.com/buildcraft/images/resource_held_example.png">
+			<img class="graph-image" src="images/supply_example.png">
+			<img class="graph-image" src="images/resource_rate_example.png">
+			<img class="graph-image" src="images/army_example.png">
+			<img class="graph-image" src="images/resource_held_example.png">
 		</p>
       </div>
     </div>
