--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="inner">
 			  <a href="https://github.com/wjmelements/buildcraft/tarball/master" class="download-button tar"><span>Download</span></a>
 			  <a href="https://github.com/wjmelements/buildcraft/zipball/master" class="download-button zip"><span>Download</span></a>
-			  <a href="https://github.com/wjmelements/buildcraft" class="code">View Buildcraft on GitHub</a>
+			  <a class="view-description" href="https://github.com/wjmelements/buildcraft" class="code">View Buildcraft on GitHub</a>
 			</div>
 			<div class="inner">
 			  <a href="https://github.com/wjmelements/buildcraft/tarball/linux" class="download-button tar"><span>Download</span></a>
