Fixed download button things

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <div id="main" role="main">
         <div class="download-bar">
 			<div class="inner">
-			  <a href="https://github.com/wjmelements/buildcraft/tarball/master" class="download-button tar"><span>Download</span></a>
-			  <a href="https://github.com/wjmelements/buildcraft/zipball/master" class="download-button zip"><span>Download</span></a>
-			  <a class="view-description" href="https://github.com/wjmelements/buildcraft" class="code">View Buildcraft on GitHub</a>
+			  <a href="https://github.com/wjmelements/buildcraft/tarball/windows" class="download-button tar"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft/zipball/windows" class="download-button zip"><span>Download</span></a>
+			  <p class="download-description">Download for Windows</p>
 			</div>
 			<div class="inner">
 			  <a href="https://github.com/wjmelements/buildcraft/tarball/linux" class="download-button tar"><span>Download</span></a>
@@ -39,9 +39,9 @@
 			  <p class="download-description">Download for Linux</p>
 			</div>
 			<div class="inner">
-			  <a href="https://github.com/wjmelements/buildcraft/tarball/windows" class="download-button tar"><span>Download</span></a>
-			  <a href="https://github.com/wjmelements/buildcraft/zipball/windows" class="download-button zip"><span>Download</span></a>
-			  <p class="download-description">Download for Windows</p>
+			  <a href="https://github.com/wjmelements/buildcraft/tarball/master" class="download-button tar"><span>Download</span></a>
+			  <a href="https://github.com/wjmelements/buildcraft/zipball/master" class="download-button zip"><span>Download</span></a>
+			  <p class="download-description">Download Source Code</p>
 			</div>
         </div>
         <p>
